--- a/Pipfile
+++ b/Pipfile
@@ -1,3 +1,14 @@
+[[source]]
+name = "pypi"
+url = "https://pypi.org/simple"
+verify_ssl = true
+
+[dev-packages]
+pylint = "~=2.15.3"
+
 [packages]
-flask = "2.0.1"
-gunicorn = "20.1.0"
+flask = "~=2.2.2"
+gunicorn = "~=20.1.0"
+
+[requires]
+python_version = "3.10"
